--- a/【文件】前端和文件的那些事.md
+++ b/【文件】前端和文件的那些事.md
@@ -50,7 +50,7 @@
 ### 下载
 1. 最简单的下载：后端直接给你一个url，`window.location.href=url`结束。
 2. 如果后端给`二进制`或`base64`怎么办，我们使用`Blob`对象结合`createObjectURL`生成下载url
-3. 对于base64,原生提供两个函数`window.atob`解码`base64`。相应的编码使用`btoa`。对于包含中文的数据，可以使用`window.atob(unescape(encodeURIComponent(base64Data)));`
+3. 对于`base64`,原生提供两个函数`window.atob`解码`base64`。相应的编码使用`btoa`。对于包含中文的数据，可以使用`const content = window.atob(unescape(encodeURIComponent(base64Data)));`
 4. 所以完整处理路径
    - 使用`new Blob([yourData])`生成`Blob`对象
    - 使用`window.URL.createObjectURL(blob)`生成下载链接
@@ -58,19 +58,19 @@
    - 最后要释放掉这个下载资源和元素
    - 示例代码：
    ```JavaScript
-   const content = '处理过的数据';
-   const blob = new Blob([content]);
-   const url = window.URL.createObjectURL(blob);
-   
-   const a = document.createElement('a');
-   a.setAttribute('download', '下载文件名');
-   
-   a.href = url;
-   document.body.appendChild(a);
-   a.click();
-   
-   a.remove();
-   window.URL.revokeObjectURL(url);
+   // 常用于前端生成上传模板文件
+   function generateTemplate(header = ['表头1', '表头2'], name = '模板') {
+      const content = `\ufeff${header.join(',')}`;
+      const blob = new Blob([content], { type: 'text/csv,charset=UTF-8' }); // Excel文件{ type: 'application/vnd.ms-excel' }
+      const url = window.URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.setAttribute('download', `${name}.csv`);
+      a.href = url;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      window.URL.revokeObjectURL(url);
+    }
    ```
    
 ### 预览
@@ -111,6 +111,65 @@
        const list = result.split('\n');
        // next do your thing....
    }
+   ```
+4. 借助`XLSX`处理Excel文件
+   - Excel读取
+   ```JavaScript
+   // 上传文件处理
+   function handleFile($event) {
+      const file = $event.target.files[0];
+      const fr = new FileReader();
+      fr.onload = (e) => {
+          const workbook = XLSX.read(new Uint8Array(e.target.result), {
+            type: 'array'
+          });
+          workbook.SheetNames.forEach((sheetName) => {
+            const ws = workbook.Sheets[sheetName];
+
+            const list = XLSX.utils.sheet_to_json(ws);
+
+            const currentHeader = this.getHeaderRow(ws);
+
+            const realList = this.getFullBody(list, currentHeader);
+          });
+        };
+      fr.readAsArrayBuffer(file);
+   }
+
+   // 当前表格的表头
+    function getHeaderRow(sheet) {
+      const headers = [];
+      const range = XLSX.utils.decode_range(sheet['!ref']);
+      let C;
+      const R = range.s.r; /* start in the first row */
+      /* walk every column in the range */
+      for (C = range.s.c; C <= range.e.c; ++C) {
+        const cell =
+          sheet[
+            XLSX.utils.encode_cell({ c: C, r: R })
+          ]; /* find the cell in the first row */
+
+        let hdr = `UNKNOWN ${C}`; // <-- replace with your desired default
+        if (cell && cell.t) hdr = XLSX.utils.format_cell(cell);
+
+        headers.push(hdr);
+      }
+      return headers;
+    }
+    // 获取完整的表格信息，不忽略空值
+    function getFullBody(sheet, header) {
+      if (sheet.length > 0) {
+        sheet.forEach((row) => {
+          header.forEach((hd) => {
+            if (row[hd] === undefined) {
+              row[hd] = '';
+            }
+          });
+        });
+      }
+      return sheet;
+    }
+
    ```
 
 
