--- a/【文件】前端和文件的那些事.md
+++ b/【文件】前端和文件的那些事.md
@@ -101,18 +101,14 @@
    const reader = new FileReader();
    reader.readAsText(file, 'gbk');
    reader.onload = (e) => {
-       // 两种reader onload写法一样
+       // 注意！！ CSV里，如果单元格内存在其他格式或换行等，用""包裹表示一个单元格
        const result = e.target.result; // reader.result同样能取到
-       // 举个例子：文件内容是一个Excel
-       // R1C1 R1C2
-       // R2C1 R2C2
-       // 这里result是一个保持上传文件排版样式的String
-       // list 是一个数组['R1C1 R1C2', 'R2C1 R2C2']
-       const list = result.split('\n');
-       // next do your thing....
+       const list = result.split('\r\n'); // \r\n是每一行的分割
+       // TODO: parseCSV
    }
    ```
 4. 借助`XLSX`处理Excel文件
+   主要是API，直接贴常用代码了
    - Excel读取
    ```JavaScript
    // 上传文件处理
@@ -170,6 +166,15 @@
       return sheet;
     }
 
+   ```
+   - Excel生成
+   ```JavaScript
+    const wb = XLSX.utils.book_new();
+    const header = ['col1', 'col2', 'col3'];
+    const data = [{col1: '1', col2: '2', col3: '3'}];
+    const ws = XLSX.utils.json_to_sheet(data, { header });
+    XLSX.utils.book_append_sheet(wb, ws, 'sheet名字');
+    XLSX.writeFile(wb, '文件.xlsx');
    ```
 
 
